syntax = "proto3";

option csharp_namespace = "Locks.Api";

package locks;

service LockService {
  rpc Ping(PingRequest) returns (PingReply);
}

message PingRequest {
  string message = 1;
}

message PingReply {
  string message = 1;
}

